Standardverhalten portiert: Bleistift + speichern, Muelltonne

--- a/bspNavi.html
+++ b/bspNavi.html
@@ -1,7 +1,7 @@
 <li>
 <!-- naechste 4-stellige mn erwuerfeln:
 vorgaenger mn ziffern anschauen:
-1. Ziffer < 7 1 Wurf: 2 Wuerfe
+1. Ziffer > 6 ? 1 Wurf: 2 Wuerfe
 naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <a href="./mn.php?mn=5413&a=Pfeifndeckel&b=Suppntopf">Titel</a>
@@ -10,5 +10,27 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=8417&a=d">DB</a>
 </li>
 <li>
-<a href="./mn.php?mn=6649&a=Brotzeit">reine </a>Entit&auml;t
+<a href="./mn.php?mn=6649&a=Brotzeit&">reine </a>Entit&auml;t 1
 </li>
+<li>
+<a href="./mn.php?mn=6649&a=Gewuerz&">reine </a>Entit&auml;t 2
+</li>
+<li>
+<a href="./mn.php?mn=8546&a=Brotzeit&">Verbindungs</a>entit&auml;t
+</li>
+<?
+/*** Menue-Links:
+ *  mn         a               b 
+ * -----+----------------+-------------
+ * 5413   1. Titel         2. Titel
+ * 6649   reine Entitaet   Bleistift weg
+ * 8417   dummy
+ ***/
+
+/*** intern gesetzte Links:
+ *  mn         a                       b 
+ * -----+---------------------- +-------------
+ * 3653   zu aendernde Entitaet
+ * 7774   zu aendernde Entitaet
+ ***/
+?>
