--- a/bspNavi.html
+++ b/bspNavi.html
@@ -16,21 +16,25 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=6649&a=Gewuerz&">reine </a>Entit&auml;t 2
 </li>
 <li>
-<a href="./mn.php?mn=8546&a=Brotzeit&">Verbindungs</a>entit&auml;t
+<a href="./mn.php?mn=8546&a=Gewuerz&b=Brotzeit&c=BrotzeitGewuerz&d=welches%20Gewuerz%20schmeckt%20zu%20welcher%20Brotzeit?">Verbindungs</a>entit&auml;t
 </li>
 <?
 /*** Menue-Links:
- *  mn         a               b 
- * -----+----------------+-------------
+ *  mn         a               b                       c                d
+ * -----+----------------+----------------+---------------------+----------------
  * 5413   1. Titel         2. Titel
  * 6649   reine Entitaet   Bleistift weg
  * 8417   dummy
+ * 8546   reine Entitaet   reine Entitaet   Verbindungsentitaet   Titel
+ * 
  ***/
 
 /*** intern gesetzte Links:
  *  mn         a                       b 
- * -----+---------------------- +-------------
+ * -----+-------------------------+-------------
  * 3653   zu aendernde Entitaet
  * 7774   zu aendernde Entitaet
+ * 4454   zu speichernde Entitaet
+ * 
  ***/
 ?>
