--- a/bspNavi.html
+++ b/bspNavi.html
@@ -18,6 +18,15 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="./mn.php?mn=8546&a=Gewuerz&b=Brotzeit&c=BrotzeitGewuerz&d=welches%20Gewuerz%20schmeckt%20zu%20welcher%20Brotzeit?">Verbindungs</a>entit&auml;t
 </li>
+<li>
+<a href="./mn.php?mn=6649&a=Ort">reine </a>Entit&auml;t 3
+</li>
+<!--li>
+<a href="./mn.php?mn=6649&a=Biergarten&">reine </a>Entit&auml;t 4
+</li-->
+<li>
+<a href="./mn.php?mn=3655&1=Ortsteil&n=Ort">1 : N </a>Entit&auml;t
+</li>
 <?
 /*** Menue-Links:
  *  mn         a               b                       c                d
@@ -30,11 +39,13 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
  ***/
 
 /*** intern gesetzte Links:
- *  mn         a                       b 
- * -----+-------------------------+-------------
+ *  mn         a                       ID                       1                         n
+ * -----+-------------------------+-------------------+-------------------------+-----------------
+ * 1142   zu loeschende Entitaet    Primaerschluessel
  * 3653   zu aendernde Entitaet
- * 7774   zu aendernde Entitaet
+ * 3655                                                 zu speichernde Entitaet   Bezugsentitaet
  * 4454   zu speichernde Entitaet
+ * 7774   zu aendernde Entitaet
  * 
  ***/
 ?>
