--- a/bspNavi.html
+++ b/bspNavi.html
@@ -40,7 +40,11 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=8546&b=Biergarten&a=Event&c=BiergartenEvent&d=was%20wann%20und%20wo?">Verbindungs</a>entit&auml;t 2
 </li>
 <li>
-<a href="./mn.php?mn=1466&a=BiergartenBrotzeit&re=1&re1=Spezl&nn=2&nn1=BiergartenEvent&nn2=BrotzeitGewuerz">variable </a>Entit&auml;t 1
+<a href="./mn.php?mn=1466&a=BiergartenBrotzeit&re=1&re1=Spezl&nn=2&nn1=BiergartenEvent&nn2=BrotzeitGewuerz">variable </a>Entit&auml;t, Variante 1
+<!-- Bsp. mit 1 reinen Entitaet und 2 Verbindungsentitaeten als Fremdschluessel -->
+</li>
+<li>
+<a href="./mn.php?mn=1466&a=BiergartenBrotzeit&re=2&re1=Spezl&re2=Brotzeit&sl=1&sl1=BiergartenEvent">variable </a>Entit&auml;t, Variante 2
 <!-- Bsp. mit 1 reinen Entitaet und 2 Verbindungsentitaeten als Fremdschluessel -->
 </li>
 <?
