DB Beispiel trennen in Theorie + Praxis

--- a/bspNavi.html
+++ b/bspNavi.html
@@ -7,7 +7,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=5413&a=Pfeifndeckel&b=Suppntopf">Titel</a>
 </li>
 <li>
-<a href="./mn.php?mn=8417&a=d">DB</a>
+<a href="./mn.php?mn=8416&a=d">DB - HowTo</a>
+</li>
+<li>
+<a href="./mn.php?mn=8417&a=d">DB Livetest</a>
 </li>
 <li>
 <a href="./mn.php?mn=6649&a=Brotzeit&">reine </a>Entit&auml;t 1 (Brotzeit)
