--- a/naviElemente.html
+++ b/naviElemente.html
@@ -17,7 +17,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=6649&a=Versicherer&">Versicherer</a>
 </li>
 <li>
-<a href="./mn.php?mn=3655&1=Schadenbuero&n=Versicherer">Schadenb&uuml;ro</a>
+<a href="./mn.php?mn=3655&1=Schadenbuero&n=Versicherer&a=1">Schadenb&uuml;ro</a>
 </li>
 <li>
 <a href="./mn.php?mn=8546&a=Gewuerz&b=Brotzeit&c=BrotzeitGewuerz&d=welches%20Gewuerz%20schmeckt%20zu%20welcher%20Brotzeit?">Verbindungs</a>entit&auml;t 1
