--- a/naviElemente.html
+++ b/naviElemente.html
@@ -16,9 +16,18 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="./mn.php?mn=6649&a=Versicherer&">Versicherer</a>
 </li>
+<ul>
 <li>
 <a href="./mn.php?mn=3655&1=Schadenbuero&n=Versicherer&a=1">Schadenb&uuml;ro</a>
 </li>
+<ul>
+<li>
+<a href="./mn.php?mn=6914&1=Bearbeiter&1n=Schadenbuero&x=true&a=4">Bearbeiter</a>&nbsp;&nbsp;<a href="./mn.php?mn=6915&e=Bearbeiter&c=1&1n=1&1n1=Schadenbuero&sl=1&sl1=PortalUser">anlegen</a>
+<!-- a href="./mn.php?mn=anlegendBearbeiter&Titel=Benutzername%20und%20Kennwort%20f&uuml;r%20den%20Bearbeiter%20ausw&auml;hlen&countEM=1&tableEM1=Schadenbuero&countSL=1&tableSL1=PortalUser&SL1=SELECT%20PortalUser.ID,%20PortalUser,%20Kennwort%20FROM%20PortalUser%20WHERE%20NOT%20EXISTS%20(%20SELECT%20PortalUserID%20FROM%20Bearbeiter%20WHERE%20Bearbeiter.PortalUserID%20=%20PortalUser.ID%20)%20ORDER%20BY%20PortalUser&zielTabelle=Bearbeiter&Action=speicherndERM&gruppenStaerke=1">neu</A -->
+<!-- Bsp. mit 1 reinen Entitaet und 2 Verbindungsentitaeten als Fremdschluessel -->
+</li>
+</ul>
+</ul>
 <li>
 <a href="./mn.php?mn=8546&a=Gewuerz&b=Brotzeit&c=BrotzeitGewuerz&d=welches%20Gewuerz%20schmeckt%20zu%20welcher%20Brotzeit?">Verbindungs</a>entit&auml;t 1
 </li>
