Region, vonPLZ, bisPLZ

--- a/naviElemente.html
+++ b/naviElemente.html
@@ -28,6 +28,19 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </li>
 </ul>
 </ul>
+<ul>
+<li/><li>
+<a href="./mn.php?mn=1466&a=Region&re=2&re1=vonPLZ&re2=bisPLZ">Region</a>
+</li>
+<ul>
+<li>
+<a href="./mn.php?mn=6649&a=vonPLZ&">von</a> - PLZ
+</li>
+<li>
+<a href="./mn.php?mn=6649&a=bisPLZ&">bis</a> - PLZ
+</li>
+</ul>
+</ul>
 <li>
 <a href="./mn.php?mn=8546&a=Gewuerz&b=Brotzeit&c=BrotzeitGewuerz&d=welches%20Gewuerz%20schmeckt%20zu%20welcher%20Brotzeit?">Verbindungs</a>entit&auml;t 1
 </li>
