Automat fuer Senden einer Datei (noch keine Uebernahme), Tutorial für Projekt-Verzeichnis, als SHA1 übergeben vom Link, Tutorial für Hinterlegen eines Salt (noch nicht im Code verwendet)

--- a/naviElemente.html
+++ b/naviElemente.html
@@ -14,6 +14,15 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=8417&a=d">DB Livetest</a>
 </li>
 <li>
+<a href="./mn.php?mn=6156&a=b6589fc6ab0dc82cf12099d1c2d40ab994e8410c">Directory - HowTo</a>
+</li>
+<li>
+<a href="./mn.php?mn=6157&a=b6589fc6ab0dc82cf12099d1c2d40ab994e8410c">Upload</a>
+</li>
+<li>
+<a href="./mn.php?mn=8418&a=d">Salt - HowTo</a>
+</li>
+<li>
 <a href="./mn.php?mn=6649&a=Versicherer&">Versicherer</a>
 </li>
 <ul>
@@ -75,20 +84,22 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </li>
 <?
 /*** Menue-Links:
- *  mn         a               b                       c                d                   1                         n
- * -----+----------------+----------------+---------------------+----------------+-------------------------+-----------------
- * 5413   1. Titel         2. Titel
- * 6649   reine Entitaet   Bleistift weg
+ *  mn         a                           b                       c                d                   1                         n
+ * -----+----------------------------+----------------+---------------------+----------------+-------------------------+-----------------
+ * 5413   1. Titel                     2. Titel
+ * 6157   sha1 des Verzeichnis-Index
+ * 6649   reine Entitaet               Bleistift weg
  * 8417   dummy
- * 8546   reine Entitaet   reine Entitaet   Verbindungsentitaet   Titel
- * 3655                                                                            zu speichernde Entitaet   Bezugsentitaet
+ * 8546   reine Entitaet               reine Entitaet   Verbindungsentitaet   Titel
+ * 3655                                                                                        zu speichernde Entitaet   Bezugsentitaet
  * 
  ***/
 
-/*** intern gesetzte Links:
+/*** interne (Automaten-)Links:
  *  mn         a                       ID             
- * -----+-------------------------+-------------------
- * 1142   zu loeschende Entitaet    Primaerschluessel
+ * -----+----------------------------+-------------------
+ * 1142   zu loeschende Entitaet       Primaerschluessel
+ * 3647   sha1 des Verzeichnis-Index
  * 3653   zu aendernde Entitaet
  * 4454   zu speichernde Entitaet
  * 7774   zu aendernde Entitaet
