--- a/naviElemente.html
+++ b/naviElemente.html
@@ -82,7 +82,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=1467&a=BiergartenBrotzeit&re=2&re1=Spezl&re2=Brotzeit&sl=1&sl1=BiergartenEvent">variable </a>Entit&auml;t, Variante 2
 <!-- Bsp. mit 1 reinen Entitaet und 2 Verbindungsentitaeten als Fremdschluessel -->
 </li>
-<?
+<?php
 /*** Menue-Links:
  *  mn         a                           b                       c                d                   1                         n
  * -----+----------------------------+----------------+---------------------+----------------+-------------------------+-----------------
