Klasse CSV, intantiiert in verarbeitenUpload.prj, liest csv-Werte in Array zeilenweise.

--- a/naviUpload.html
+++ b/naviUpload.html
@@ -7,7 +7,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <a href="./mn.php?mn=6157&a=b6589fc6ab0dc82cf12099d1c2d40ab994e8410c">Omnipage</a>
 </li>
-<?
+<?php
 /*** Menue-Links:
  *  mn         a               b                       c                d                   1                         n
  * -----+----------------+----------------+---------------------+----------------+-------------------------+-----------------
