--- a/naviUpload.html
+++ b/naviUpload.html
@@ -1,4 +1,5 @@
 <img src="images/ass21.png">
+<ul>
 <li>
 <!-- naechste 4-stellige mn erwuerfeln:
 vorgaenger mn ziffern anschauen:
@@ -7,6 +8,19 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <a href="./mn.php?mn=6157&a=b6589fc6ab0dc82cf12099d1c2d40ab994e8410c">Omnipage</a>
 </li>
+<li>
+<a href="./mn.php?mn=6997&a=Topic&">Topic</a>
+</li>
+<li>
+<a href="./mn.php?mn=6997&a=Token&">Token</a>
+</li>
+<li>
+<a href="./mn.php?mn=3239&a=Topic&b=Token&c=TopicToken&i=1">TopicToken</a>
+</li>
+<li>
+<a href="./mn.php?mn=8418&a=d">Salt - HowTo</a>
+</li>
+</ul>
 <?php
 /*** Menue-Links:
  *  mn         a               b                       c                d                   1                         n
