--- a/naviUpload.html
+++ b/naviUpload.html
@@ -9,10 +9,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=6157&a=b6589fc6ab0dc82cf12099d1c2d40ab994e8410c">Omnipage</a>
 </li>
 <li>
-<a href="./mn.php?mn=6997&a=Topic&">Topic</a>
+<a href="./mn.php?mn=6997&a=Topic">Topic</a>
 </li>
 <li>
-<a href="./mn.php?mn=6997&a=Token&">Token</a>
+<a href="./mn.php?mn=6998&a=Token">Token</a>
 </li>
 <li>
 <a href="./mn.php?mn=3239&a=Topic&b=Token&c=TopicToken&i=1">TopicToken</a>
