Entität TopicForderung eingeführt mit erforderlichem Mindestgewicht zum Akzeptieren eines erkannten Topic. Ein paar <? ergänzt mit php

--- a/naviUpload.html
+++ b/naviUpload.html
@@ -12,6 +12,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=6997&a=Topic">Topic</a>
 </li>
 <li>
+<a href="./mn.php?mn=3655&1=TopicForderung&n=Topic&a=1">Min-Gewicht</a> Topic
+</li>
+<li>
 <a href="./mn.php?mn=6998&a=Token">Token</a>
 </li>
 <li>
