Entitäten SubToken u. TokenSubToken angelegt.

--- a/naviUpload.html
+++ b/naviUpload.html
@@ -12,6 +12,12 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=6998&a=Token">Token</a>
 </li>
 <li>
+<a href="./mn.php?mn=3655&1=SubToken&n=Token&a=1">SubToken</a>
+</li>
+<li>
+<a href="./mn.php?mn=1466&re=1&re1=Token&1n=1&1n1=SubToken&a=TokenSubToken">TST</a>
+</li>
+<li>
 <a href="./mn.php?mn=3239&a=Topic&b=Token&c=TopicToken&i=1">TopicToken</a>
 </li>
 <li>
