Wg. Gewichtung wird 1 in einem längerem String enthaltener Überschrift-Token pro Zeile ignoriert. Die Struktur der Überschrift wird in KV::this->reihe mit den TopicToken.ID s gespeichert, die Informationen koennen als name-value Paare an den nächsten Automaten übergeben werden.

--- a/naviUpload.html
+++ b/naviUpload.html
@@ -8,6 +8,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <a href="./mn.php?mn=6157&a=b6589fc6ab0dc82cf12099d1c2d40ab994e8410c">Omnipage</a>
 </li>
+<i> Parser-Logik</i>
 <li>
 <a href="./mn.php?mn=6998&a=Token">Token</a>
 </li>
@@ -24,7 +25,13 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=6997&a=Topic">Topic</a>
 </li>
 <li>
-<a href="./mn.php?mn=3655&1=TopicForderung&n=Topic&a=1">Min-Gewicht</a> Topic
+Topic <a href="./mn.php?mn=3655&1=TopicForderung&n=Topic&a=1">Min-Gewicht</a>
+</li>
+<li>
+<a href="./mn.php?mn=6998&a=Thema">Thema</a>
+</li>
+<li>
+Thema <a href="./mn.php?mn=7545&re=1&re1=Thema&nn=1&nn1=TopicToken&a=TopicTokenThema">verkn&uuml;pft</a>
 </li>
 <li>
 <a href="./mn.php?mn=8418&a=d">Salt - HowTo</a>
