Format zum Thema des TopicToken finden. Wenn es ein SubToken ist, das Thema des Parent-Token im Topic finden.

--- a/naviUpload.html
+++ b/naviUpload.html
@@ -34,6 +34,12 @@ Topic <a href="./mn.php?mn=3655&1=TopicForderung&n=Topic&a=1">Min-Gewicht</a>
 Thema <a href="./mn.php?mn=7545&re=1&re1=Thema&nn=1&nn1=TopicToken&a=TopicTokenThema">verkn&uuml;pft</a>
 </li>
 <li>
+<a href="./mn.php?mn=6998&a=Format">Format</a>
+</li>
+<li>
+<a href="./mn.php?mn=3239&a=Thema&b=Format&c=ThemaFormat&i=1">ThemaFormat</a>
+</li>
+<li>
 <a href="./mn.php?mn=8418&a=d">Salt - HowTo</a>
 </li>
 </ul>
