--- a/naviUpload.html
+++ b/naviUpload.html
@@ -16,7 +16,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=3655&1=SubToken&n=Token&a=1">SubToken</a>
 </li>
 <li>
-<a href="./mn.php?mn=7545&re=1&re1=Token&1n=1&1n1=SubToken&a=TokenSubToken">TST</a>
+<a href="./mn.php?mn=7545&re=1&re1=Token&1n=1&1n1=SubToken&a=TokenSubToken">ToSuTo</a>
 </li>
 <li>
 <a href="./mn.php?mn=3239&a=Topic&b=Token&c=TopicToken&i=2">TopicToken</a>
