--- a/naviGoogle.html
+++ b/naviGoogle.html
@@ -13,6 +13,12 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a target=_blank href="./html5.html">h5</a>
 </li>
+<li>
+<a target=_blank href="./dragnDrop.html">Drag & Drop</a>
+</li>
+<li>
+<a target=_blank href="./scrollTable.html">Scroll Tabelle</a>
+</li>
 <?php
 if( isset($_SERVER["saharaServerType"]) && "develop" == $_SERVER["saharaServerType"] )
 {
