Angebot erstellen am Einbauen in FBS2.

--- a/naviGoogle.html
+++ b/naviGoogle.html
@@ -33,7 +33,10 @@ if( isset($_SERVER["saharaServerType"]) && "develop" == $_SERVER["saharaServerTy
 }
 ?>
 <li>
-<a href="./mn.php?navi=Google&mn=4737&a=3761">Auftr&auml;ge</a>
+<a href="./mn.php?mn=1466&a=EDVAngebot&x=1">Angebot</a>
+</li>
+<li>
+<a href="./mn.php?mn=1466&a=EDV">EDV</a>
 </li>
 <?php
 /*** Menue-Links:
