habWas() gibt false zurück, wenn über Vektor-Grenze hinaus geprüft wird. (Beachten, anschließend $_E['wZu'] zu setzen und nicht $wZu, da sonst möglicherweise Endlos-Schleife)

--- a/naviGoogle.html
+++ b/naviGoogle.html
@@ -38,6 +38,12 @@ if( isset($_SERVER["saharaServerType"]) && "develop" == $_SERVER["saharaServerTy
 <li>
 <a href="./mn.php?mn=1466&a=EDV">EDV</a>
 </li>
+<li>
+<a href="./mn.php?mn=1466&a=Stundensatz&re=1&re1=Zeitstempel">Stundensatz</a>
+</li>
+<li>
+<a href="./mn.php?mn=6998&a=Zeitstempel">Zeitstempel</a>
+</li>
 <?php
 /*** Menue-Links:
  *  mn         a               b                       c                d                   1                         n
