drag and drop mit Modulen, WR und String

--- a/naviGoogle.html
+++ b/naviGoogle.html
@@ -17,6 +17,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a target=_blank href="./dragnDrop.html">Drag & Drop</a>
 </li>
 <li>
+<a target=_blank href="./dnd.html">DnD</a>
+</li>
+<li>
 <a target=_blank href="./scrollTable.html">Scroll Tabelle</a>
 </li>
 <?php
