Protokoll schreiben können aus EDV-Projekt heraus anstelle des Angebots

--- a/dnd.html
+++ b/dnd.html
@@ -106,7 +106,7 @@ DnD-H5-PHP
 </title>
 </head>
 <body>
-<h2>DevelopPHP.com</h2>
+<h2>PV - Software Prototyping</h2>
 <div id="app_status">App status area ready...</div>
 <div id="wr123" draggable="true" ondragstart="drag_start(event)"><!-- ondragend="drag_end(event)"-->
 WR342
