Navigationsmenue wechseln begonnen

--- a/naviElemente.html
+++ b/naviElemente.html
@@ -1,5 +1,8 @@
 <img src="images/elemente.png">
 <li>
+<a href="./mn.php?mn=5323&n=1">Angebote</a>
+</li>
+<li>
 <!-- naechste 4-stellige mn erwuerfeln:
 vorgaenger mn ziffern anschauen:
 1. Ziffer > 6 ? 1 Wurf: 2 Wuerfe
