DB-Zugriff eingestellt, apache2 in conf-enabled/erica.conf konfiguriert, Mitarbeiter, Tätigkeit und Region angelegt.

--- a/naviElemente.html
+++ b/naviElemente.html
@@ -26,7 +26,19 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=8418&a=d">Salt - HowTo</a>
 </li>
 <li>
-<a href="./mn.php?mn=6649&a=Versicherer&">Versicherer</a>
+<a href="./mn.php?mn=pe&a=Bereich">Bereich</a>
+</li>
+<li>
+<a href="./mn.php?mn=pe&a=Region">Region</a>
+</li>
+<li>
+<a href="./mn.php?mn=pe&a=Mitarbeiter">Mitarbeiter</a>
+</li>
+<li>
+<a href="./mn.php?mn=pe&a=Taetigkeit">T&auml;tigkeit</a>
+</li>
+<li>
+<a href="./mn.php?mn=pe_pe&re=2&re1=Mitarbeiter&re2=Taetigkeit&a=MitarbeiterTaetigkeit">Mitarbeiter-T&auml;tigkeit</a>
 </li>
 <ul>
 <li>
