--- a/naviElemente.html
+++ b/naviElemente.html
@@ -26,6 +26,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=8418&a=d">Salt - HowTo</a>
 </li>
 <li>
+<a href="./mn.php?mn=pe&a=Auftragsart">Auftragsart</a>
+</li>
+<li>
 <a href="./mn.php?mn=pe&a=Bereich">Bereich</a>
 </li>
 <li>
@@ -35,10 +38,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=pe&a=Mitarbeiter">Mitarbeiter</a>
 </li>
 <li>
-<a href="./mn.php?mn=pe&a=Taetigkeit">T&auml;tigkeit</a>
+<a href="./mn.php?mn=pe&a=Funktion">Funktion</a>
 </li>
 <li>
-<a href="./mn.php?mn=pe_pe&re=2&re1=Mitarbeiter&re2=Taetigkeit&a=MitarbeiterTaetigkeit">Mitarbeiter-T&auml;tigkeit</a>
+<a href="./mn.php?mn=pe_pe&re=2&re1=Mitarbeiter&re2=Funktion&a=MitarbeiterFunktion">Mitarbeiter-Funktion</a>
 </li>
 <ul>
 <li>
