Entität Person mit Formular.

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -14,6 +14,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=sl_pe&a=ClientAdresse&sl=1&sl1=Client&re=1&re1=Zeitstempel">Adresse</a>
 </li>
 <li>
+<a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a>
+</li>
+<li>
 <a href="./mn.php?mn=pe&a=Beziehung">Beziehung</a>
 </li>
 <li>
