Entitäten Recht + PersonRecht.

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -15,9 +15,14 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </li>
 <li>
 <a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a>
+&nbsp;&nbsp;
+<a href="./mn.php?mn=sl_pe&a=PersonRecht&sl=1&sl1=Person&re=1&re1=Recht&i=2">Recht</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Beziehung">Beziehung</a>
+</li>
+<li>
+<a href="./mn.php?mn=pe&a=Recht">Recht</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Zeitstempel">Zeitstempel</a>
