Entität PersonClient mit 4 FKs.

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -14,9 +14,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=sl_pe&a=ClientAdresse&sl=1&sl1=Client&re=1&re1=Zeitstempel">Adresse</a>
 </li>
 <li>
-<a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a>
-&nbsp;&nbsp;
-<a href="./mn.php?mn=sl_pe&a=PersonRecht&sl=1&sl1=Person&re=1&re1=Recht&i=2">Recht</a>
+<a href="./mn.php?mn=pe&a=Person">Person</a>
+<!--a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a-->
+&nbsp;&gt;&gt;&nbsp;
+<a href="./mn.php?mn=sl_pe&a=PersonClient&sl=2&sl1=Client&sl2=Person&re=2&re1=Beziehung&re2=Recht&i=2">Client</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Beziehung">Beziehung</a>
