Lösch-Regeln generiert, Logo verkleinert.

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -1,4 +1,4 @@
-<img src="images/grandma-penguin-100px.png">
+<img src="images/grandma-penguin-50px.png">
 <!-- li>
 <a target=_blank href="./geocodeXML.php">Lat+Lng</a>
 </li-->
@@ -16,7 +16,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="./mn.php?mn=pe&a=Person">Person</a>
 <!--a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a-->
-&nbsp;&gt;&gt;&nbsp;
+&nbsp;&lt;--&gt;&nbsp;
 <a href="./mn.php?mn=sl_pe&a=PersonClient&sl=2&sl1=Client&sl2=Person&re=2&re1=Beziehung&re2=Recht&i=2">Client</a>
 </li>
 <li>
