Entitäten Tag, VS(Quart), ClientVS angelegt und berechnende Anzeige für ClientVS (=Wochenplan).

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -11,6 +11,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=pe&a=Client">Client</a>
 </li>
 <li>
+<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=4">Planung</a>
+</li>
+<li>
 <a href="./mn.php?mn=sl_pe&a=ClientAdresse&sl=1&sl1=Client&re=1&re1=Zeitstempel">Adresse</a>
 </li>
 <li>
