Entitäten Engagement, MAClient, MAClientVS.

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -8,7 +8,7 @@ vorgaenger mn ziffern anschauen:
 naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <li>
-<a href="./mn.php?mn=pe&a=Client">Client</a>
+<a href="./mn.php?mn=pe&a=Client">Client</a>&nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a>
 </li>
 <li>
 <a href="./mn.php?mn=sl_pe&a=ClientAdresse&sl=1&sl1=Client&re=1&re1=Zeitstempel">Adresse</a>
@@ -17,7 +17,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=pe&a=MA">Mitarbeiter&#042;in</a>
 </li>
 <li>
-<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=4">Planung</a>
+<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA&re=1&re1=Engagement">Engagement</a>&nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=MAClientVS&sl=2&sl1=ClientVS&sl2=MA&i=3">Planung</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Person">Person</a>
@@ -27,6 +27,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Beziehung">Beziehung</a>
+</li>
+<li>
+<a href="./mn.php?mn=pe&a=Engagement">Engagement</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Recht">Recht</a>
