--- a/naviCFS.html
+++ b/naviCFS.html
@@ -8,7 +8,8 @@ vorgaenger mn ziffern anschauen:
 naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <li>
-<a href="./mn.php?mn=pe&a=Client">Client</a>&nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a>
+<a href="./mn.php?mn=pe&a=Client">Client</a>
+<!-- &nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a> -->
 </li>
 <li>
 <a href="./mn.php?mn=sl_pe&a=ClientAdresse&sl=1&sl1=Client&re=1&re1=Zeitstempel">Adresse</a>
