Adresse, MA-Engagement, PersonClient über Symbole anlegbar.

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -11,20 +11,20 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=pe&a=Client">Client</a>
 <!-- &nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a> -->
 </li>
-<li>
+<!-- li>
 <a href="./mn.php?mn=sl_pe&a=ClientAdresse&sl=1&sl1=Client&re=1&re1=Zeitstempel">Adresse</a>
-</li>
+</li -->
 <li>
 <a href="./mn.php?mn=pe&a=MA">Mitarbeiter&#042;in</a>
 </li>
 <li>
-<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA&re=1&re1=Engagement">Engagement</a>
+<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA&re=1&re1=Engagement&i=3">Engagement</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Person">Person</a>
 <!--a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a-->
-&nbsp;&lt;--&gt;&nbsp;
-<a href="./mn.php?mn=sl_pe&a=PersonClient&sl=2&sl1=Client&sl2=Person&re=2&re1=Beziehung&re2=Recht&i=2">Client</a>
+<!-- &nbsp;&lt;--&gt;&nbsp;
+<a href="./mn.php?mn=sl_pe&a=PersonClient&sl=2&sl1=Client&sl2=Person&re=2&re1=Beziehung&re2=Recht&i=2">Client</a> -->
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Beziehung">Beziehung</a>
