--- a/naviCFS.html
+++ b/naviCFS.html
@@ -18,7 +18,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=pe&a=MA">Mitarbeiter&#042;in</a>
 </li>
 <li>
-<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA&re=1&re1=Engagement&i=3">Engagement</a>
+<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA&i=3">Engagement</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Person">Person</a>
