Client: Symbole getrennt nach Navi Stammblatt oder Wochenplan

--- a/naviStammblatt.html
+++ b/naviStammblatt.html
@@ -5,16 +5,17 @@ vorgaenger mn ziffern anschauen:
 naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <li>
-<a href="./mn.php?mn=pe&a=Beziehung&navi=Begriffe">Beziehung</a>
+<a href="./mn.php?mn=pe&a=Client&navi=Stammblatt">Client</a>
+<!-- &nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a> -->
 </li>
 <li>
-<a href="./mn.php?mn=pe&a=Engagement&navi=Begriffe">Engagement</a>
+<a href="./mn.php?mn=pe&a=Beziehung&navi=Stammblatt">Beziehung</a>
 </li>
 <li>
-<a href="./mn.php?mn=pe&a=Recht&navi=Begriffe">Recht</a>
+<a href="./mn.php?mn=pe&a=Recht&navi=Stammblatt">Recht</a>
 </li>
 <li>
-<a href="./mn.php?mn=pe&a=Zeitstempel&navi=Begriffe">Zeitstempel</a>
+<a href="./mn.php?mn=pe&a=Zeitstempel&navi=Stammblatt">Zeitstempel</a>
 </li -->
 <?php
 /*** Menue-Links:
