--- a/naviStammblatt.html
+++ b/naviStammblatt.html
@@ -1,4 +1,3 @@
-<img src="images/grandma-penguin-50px.png">
 <!-- naechste 4-stellige mn erwuerfeln:
 vorgaenger mn ziffern anschauen:
 1. Ziffer > 6 ? 1 Wurf: 2 Wuerfe
@@ -7,6 +6,12 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="./mn.php?mn=pe&a=Client&navi=Stammblatt">Client</a>
 <!-- &nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a> -->
+</li>
+<li>
+<a href="./mn.php?mn=pe&a=Person&navi=Stammblatt">Person</a>
+<!--a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a-->
+<!-- &nbsp;&lt;--&gt;&nbsp;
+<a href="./mn.php?mn=sl_pe&a=PersonClient&sl=2&sl1=Client&sl2=Person&re=2&re1=Beziehung&re2=Recht&i=2">Client</a> -->
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Beziehung&navi=Stammblatt">Beziehung</a>
