KW innerhalb von Objekt $kw hin- und herschieben.

--- a/naviKW.html
+++ b/naviKW.html
@@ -3,10 +3,25 @@ vorgaenger mn ziffern anschauen:
 1. Ziffer > 6 ? 1 Wurf: 2 Wuerfe
 naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
-<li>
 <?php
-$str = mktime();
+//$str = mktime();
+global $kw;
+if( isset($kw) )
+{?>
+  <li>
+    <a href="./mn.php?mn=kw&a=MAClientVS&k=<?php echo $kw->KWzurueck;?>&navi=KW">KW <?php echo $kw->Kalenderwoche - 1;?></a>
+  </li><?php
+}
 ?>
-<a href="./mn.php?mn=kw&a=MAClientVS&k=<?php echo $str;?>&navi=KW">KW</a>
+<!--a href="./mn.php?mn=kw&a=MAClientVS&k=<?php echo $str;?>&navi=KW">heute</a-->
+<li>
+<a href="./mn.php?mn=kw&a=MAClientVS&k=Y-m-d&navi=KW">Heute</a>
 </li>
-
+<?php
+if( isset($kw) )
+{?>
+  <li>
+    <a href="./mn.php?mn=kw&a=MAClientVS&k=<?php echo $kw->KWweiter;?>&navi=KW">KW <?php echo $kw->Kalenderwoche + 1;?></a>
+  </li><?php
+}
+?>
