--- a/naviKW.html
+++ b/naviKW.html
@@ -1,20 +1,24 @@
 <?php
 global $kw;
+if( isset($_REQUEST["b"]) )
+  $maORcl = $_REQUEST["b"];
+else
+  $maORcl = "d";
 if( isset($kw) )
 {?>
   <li>
-    <a href="./mn.php?mn=kw&a=MAClientVS&k=<?php echo $kw->KWzurueck;?>&navi=KW&u=KW">KW <?php echo $kw->Kalenderwoche - 1;?></a>
+    <a href="./mn.php?mn=kw&a=MAClientVS&b=<?php echo $maORcl;?>&k=<?php echo $kw->KWzurueck;?>&navi=KW&u=KW">KW <?php echo $kw->Kalenderwoche - 1;?></a>
   </li><?php
 }
 ?>
 <li>
-<a href="./mn.php?mn=kw&a=MAClientVS&k=Y-m-d&navi=KW&u=KW">Heute</a>
+<a href="./mn.php?mn=kw&a=MAClientVS&b=<?php echo $maORcl;?>&k=Y-m-d&navi=KW&u=KW">Heute</a>
 </li>
 <?php
 if( isset($kw) )
 {?>
   <li>
-    <a href="./mn.php?mn=kw&a=MAClientVS&k=<?php echo $kw->KWweiter;?>&navi=KW&u=KW">KW <?php echo $kw->Kalenderwoche + 1;?></a>
+    <a href="./mn.php?mn=kw&a=MAClientVS&b=<?php echo $maORcl;?>&k=<?php echo $kw->KWweiter;?>&navi=KW&u=KW">KW <?php echo $kw->Kalenderwoche + 1;?></a>
   </li><?php
 }
 ?>
