Menue-Link Client umbenennen in Klient*in

--- a/naviCFS.html
+++ b/naviCFS.html
@@ -7,7 +7,7 @@ vorgaenger mn ziffern anschauen:
 naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 -->
 <li>
-<a href="./mn.php?mn=pe&a=Client">Client</a>
+<a href="./mn.php?mn=pe&a=Client">Klient&#042;in</a>
 <!-- &nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a> -->
 </li>
 <!-- li>
