--- a/naviStammblatt.html
+++ b/naviStammblatt.html
@@ -8,6 +8,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <!-- &nbsp;--&nbsp;<a href="./mn.php?mn=sl_pe&a=ClientVS&sl=1&sl1=Client&re=2&re1=Tag&re2=VS&i=3">Planung</a> -->
 </li>
 <li>
+<a href="./mn.php?mn=pe&a=MA&navi=Stammblatt">Mitarbeiter&#042;in</a>
+</li>
+<li>
 <a href="./mn.php?mn=pe&a=Person&navi=Stammblatt">Person</a>
 <!--a href="./mn.php?mn=sl_pe&a=Person&sl=1&sl1=Client&re=1&re1=Beziehung">Person</a-->
 <!-- &nbsp;&lt;--&gt;&nbsp;
@@ -17,7 +20,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="./mn.php?mn=pe&a=Beziehung&navi=Stammblatt">Beziehung</a>
 </li>
 <li>
-<a href="./mn.php?mn=pe&a=Recht&navi=Stammblatt">Recht</a>
+<a href="./mn.php?mn=pe&a=Recht&navi=Stammblatt">Berechtigung</a>
 </li>
 <li>
 <a href="./mn.php?mn=pe&a=Zeitstempel&navi=Stammblatt">Zeitstempel</a>
