--- a/naviPlan.html
+++ b/naviPlan.html
@@ -24,5 +24,5 @@ if( isset($_REQUEST["k"]) )
 <a href="./mn.php?mn=pe&a=MA<?php echo $k;?>&navi=Plan">Mitarbeiter&#042;in</a>
 </li>
 <li>
-<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA<?php echo $k;?>&navi=Plan&i=3">Engagement</a>
+<a href="./mn.php?mn=sl_pe&a=MAClient&sl=2&sl1=Client&sl2=MA<?php echo $k;?>&navi=Plan&i=3">Betreuung</a>
 </li>
