PE: Behörde, Bundesland, Kurs, Trainer. PE_PE: Kursdauer

--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -10,16 +10,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['Behoerde']?>">Beh&ouml;rde</a>
-</li>
-<li>
-<a href="<?php echo $candyURL['Bundesland']?>">Bundesland</a>
-</li>
-<li>
-<a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
-</li>
-<li>
-<a href="<?php echo $candyURL['Trainer']?>">Trainer</a>
+<a href="<?php echo $candyURL['Dauer']?>">Kursdauer</a>
 </li>
 <!--li>
 <a href="<?php echo $candyURL['Zeitstempel']?>">Zeitstempel</a>
