--- a/naviZahnrad.html
+++ b/naviZahnrad.html
@@ -16,6 +16,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Bundesland']?>">Bundesland</a>
 </li>
 <li>
+<a href="<?php echo $candyURL['Ort']?>">Kursort</a>
+</li>
+<li>
 <a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
 </li>
 <li>
