--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -12,6 +12,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['Dauer']?>">Kursdauer</a>
 </li>
+<li>
+<a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
+</li>
 <!--li>
 <a href="<?php echo $candyURL['Zeitstempel']?>">Zeitstempel</a>
 </li-->
