--- a/naviZahnrad.html
+++ b/naviZahnrad.html
@@ -16,10 +16,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Bundesland']?>">Bundesland</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['Ort']?>">Kursort</a>
+<a href="<?php echo $candyURL['Kursart']?>">Kursart</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
+<a href="<?php echo $candyURL['Ort']?>">Kursort</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Trainer']?>">Trainer</a>
