--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -10,10 +10,16 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
+<a href="<?php echo $candyURL['Ort']?>">Kursort</a>
+</li>
+<li>
 <a href="<?php echo $candyURL['Dauer']?>">Kursdauer</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
+</li>
+<li>
+<a href="<?php echo $candyURL['KursTrainer']?>">Kurs-Trainer</a>
 </li>
 <!--li>
 <a href="<?php echo $candyURL['Zeitstempel']?>">Zeitstempel</a>
