--- a/naviPlan.html
+++ b/naviPlan.html
@@ -7,5 +7,5 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['Termin']?>">Termin</a>
+<a href="<?php echo $candyURL['Termin']?>">Termine</a>
 </li>
