Nach Besprechung: Kursdauer, Trainer-Bundesland entfert. Kursart in Leistung umbenannt, Kategorie (Alkohol, Drogen usw.) eingeführt, Verknüpfung Kursort-Trainer.

--- a/naviZahnrad.html
+++ b/naviZahnrad.html
@@ -16,7 +16,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Bundesland']?>">Bundesland</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['Kursart']?>">Kursart</a>
+<a href="<?php echo $candyURL['Leistung']?>">Leistung</a>
+</li>
+<li>
+<a href="<?php echo $candyURL['Kategorie']?>">Kategorie</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Trainer']?>">Trainer</a>
