--- a/naviZahnrad.html
+++ b/naviZahnrad.html
@@ -22,6 +22,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Kategorie']?>">Kategorie</a>
 </li>
 <li>
+<a href="<?php echo $candyURL['Massnahme']?>">Massnahme</a>
+</li>
+<li>
 <a href="<?php echo $candyURL['Trainer']?>">Trainer</a>
 </li>
 <!--li>
