TrainerID aus Ort entfernt, dafür TrainerOrtLeistung angelegt u. dort die bisherige Zuordnung übernommen.

--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -12,10 +12,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['Ort']?>">Kursort</a>
 </li>
-<!--li>
-<a href="<?php echo $candyURL['Dauer']?>">Kursdauer</a>
-</li>
 <li>
+<a href="<?php echo $candyURL['TrainerOrtLeistung']?>">TrainerOrtLeistung</a>
+</li>
+<!--li>
 <a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
 </li>
 <li>
