Leistung umbenannt in TerminArt, mit gefüllter DB.

--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -13,7 +13,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Ort']?>">Kursort</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['TrainerOrtLeistung']?>">TrainerOrtLeistung</a>
+<a href="<?php echo $candyURL['TrainerOrtTerminart']?>">TrainerOrtTerminart</a>
 </li>
 <!--li>
 <a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
