--- a/naviZahnrad.html
+++ b/naviZahnrad.html
@@ -16,7 +16,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Bundesland']?>">Bundesland</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['Leistung']?>">Leistung</a>
+<a href="<?php echo $candyURL['Terminart']?>">Terminart</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Kategorie']?>">Kategorie</a>
