--- a/naviPlan.html
+++ b/naviPlan.html
@@ -7,5 +7,8 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
+<a href="<?php echo $candyURL['Termin']?>&b=n">Nachschulung</a>
+</li>
+<li>
 <a href="<?php echo $candyURL['Termin']?>">Termine</a>
 </li>
