BehoerdeOrt, ProbandMassnahme, fortsetzender Link bei Eingabe Tel + Proband vereinfacht.

--- a/naviProband.html
+++ b/naviProband.html
@@ -18,4 +18,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['TelProband']?>">beide</a>
 </li>
+<li>
+<a href="<?php echo $candyURL['ProbandMassnahme']?>">Massnahme</a>
+</li>
+<li>
+<a href="<?php echo $candyURL['OrtBehoerde']?>">Wohnort</a>
+</li>
 </ul>
