--- a/naviProband.html
+++ b/naviProband.html
@@ -16,7 +16,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Proband']?>">Proband</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['TelProband']?>">beide</a>
+<img src="images/iconmonstr-link-6-12.png" alt="Tel &lt;--&gt; Proband" usemap="#telProband">
+<map name="telProband">
+  <area shape=rect coords="0,0,32,32" title='Tel von ...' href="<?php echo $candyURL['TelProband']?>">
+</map>
 </li>
 <li>
 <a href="<?php echo $candyURL['ProbandMassnahme']?>">Massnahme</a>
