--- a/naviPlan.html
+++ b/naviPlan.html
@@ -7,7 +7,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['Termin']?>&b=n">Nachschulung</a>
+<a href="<?php echo $candyURL['Termin']?>&i=2&b=n">Nachschulung</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Termin']?>">Termine</a>
