--- a/naviPlan.html
+++ b/naviPlan.html
@@ -10,5 +10,5 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Termin']?>&i=2&b=n">Nachschulung</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['Termin']?>">Termine</a>
+<a href="<?php echo $candyURL['Termin']?>&i=2&b=u">UE</a>
 </li>
