Kategorie u. Vormerkung beim Termin, Mail des Probanden. Adresse im Proband-Menue begonnen.

--- a/naviProband.html
+++ b/naviProband.html
@@ -22,6 +22,24 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </map>
 </li>
 <li>
+<a href="<?php echo $candyURL['Mail']?>">Mail</a>
+</li>
+<li>
+<img src="images/iconmonstr-link-6-12.png" alt="Mail &lt;--&gt; Proband" usemap="#mailProband">
+<map name="mailProband">
+  <area shape=rect coords="0,0,32,32" title='Mail von ...' href="<?php echo $candyURL['MailProband']?>">
+</map>
+</li>
+<li>
+<a href="<?php echo $candyURL['Adresse']?>">Adresse</a>
+</li>
+<li>
+<img src="images/iconmonstr-link-6-12.png" alt="Adresse &lt;--&gt; Proband" usemap="#mailProband">
+<map name="mailProband">
+  <area shape=rect coords="0,0,32,32" title='Adresse von ...' href="<?php echo $candyURL['AdresseProband']?>">
+</map>
+</li>
+<li>
 <a href="<?php echo $candyURL['ProbandMassnahme']?>">Massnahme</a>
 </li>
 <li>
