--- a/naviPlan.html
+++ b/naviPlan.html
@@ -12,3 +12,6 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['Termin']?>&i=2&b=u">UE</a>
 </li>
+<li>
+<a href="<?php echo $candyURL['Termin']?>&i=2&b=v">Vormerkung</a>
+</li>
