1N FK-Listen: &1nf= stellt Anzahl angezeigter RE-Felder einstellen. Adresse mit Strasse, Nr vervollständigen unter Verknüpfung zu OrtBehoerde.

--- a/naviPlan.html
+++ b/naviPlan.html
@@ -15,3 +15,6 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['Termin']?>&i=2&b=v">Vormerkung</a>
 </li>
+<li>
+<a href="<?php echo $candyURL['Termin']?>&i=2&b=c">Verkehrscoaching</a>
+</li>
