--- a/naviProband.html
+++ b/naviProband.html
@@ -34,8 +34,8 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <a href="<?php echo $candyURL['Adresse']?>">Adresse</a>
 </li>
 <li>
-<img src="images/iconmonstr-link-6-12.png" alt="Adresse &lt;--&gt; Proband" usemap="#mailProband">
-<map name="mailProband">
+<img src="images/iconmonstr-link-6-12.png" alt="Adresse &lt;--&gt; Proband" usemap="#adrProband">
+<map name="adrProband">
   <area shape=rect coords="0,0,32,32" title='Adresse von ...' href="<?php echo $candyURL['AdresseProband']?>">
 </map>
 </li>
