--- a/naviProband.html
+++ b/naviProband.html
@@ -10,10 +10,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['Tel']?>">Telefon</a>
+<a href="<?php echo $candyURL['Proband']?>">Proband</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['Proband']?>">Proband</a>
+<a href="<?php echo $candyURL['Tel']?>">Telefon</a>
 </li>
 <li>
 <img src="images/iconmonstr-link-6-12.png" alt="Tel &lt;--&gt; Proband" usemap="#telProband">
@@ -31,7 +31,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </map>
 </li>
 <li>
-<a href="<?php echo $candyURL['Adresse']?>">Adresse</a>
+<a href="<?php echo $candyURL['OrtBehoerde']?>">Wohnort</a>
+</li>
+<li>
+<a href="<?php echo $candyURL['Adresse']?>">Strasse</a>
 </li>
 <li>
 <img src="images/iconmonstr-link-6-12.png" alt="Adresse &lt;--&gt; Proband" usemap="#adrProband">
@@ -41,8 +44,5 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 </li>
 <li>
 <a href="<?php echo $candyURL['ProbandMassnahme']?>">Massnahme</a>
-</li>
-<li>
-<a href="<?php echo $candyURL['OrtBehoerde']?>">Wohnort</a>
 </li>
 </ul>
