--- a/naviProband.html
+++ b/naviProband.html
@@ -10,6 +10,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
+<a href="<?php echo $candyURL['liste']?>">Liste</a>
+</li>
+<li>
 <a href="<?php echo $candyURL['Proband']?>">Proband</a>
 </li>
 <li>
