_E-Variablen gesetzt zum Joinen.

--- a/naviProband.html
+++ b/naviProband.html
@@ -21,7 +21,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <img src="images/iconmonstr-link-6-12.png" alt="Tel &lt;--&gt; Proband" usemap="#telProband">
 <map name="telProband">
-  <area shape=rect coords="0,0,32,32" title='Tel von ...' href="<?php echo $candyURL['TelProband']?>">
+  <area shape=rect coords="0,0,32,32" title='Tel von ...' href="<?php echo $candyURL['ProbandTel']?>">
 </map>
 </li>
 <li>
