--- a/naviProband.html
+++ b/naviProband.html
@@ -34,7 +34,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <img src="images/iconmonstr-link-6-12.png" alt="Mail &lt;--&gt; Proband" usemap="#mailProband">
 <map name="mailProband">
-  <area shape=rect coords="0,0,32,32" title='Mail von ...' href="<?php echo $candyURL['MailProband']?>">
+  <area shape=rect coords="0,0,32,32" title='Mail von ...' href="<?php echo $candyURL['ProbandMail']?>">
 </map>
 </li>
 <li>
