Neuer Proband: Adresse erfassen u. zuweisen, noch ohne Anlegen neuer Wohnort u. ohne Rücksprung in die Liste.

--- a/naviProband.html
+++ b/naviProband.html
@@ -46,7 +46,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <img src="images/iconmonstr-link-6-12.png" alt="Adresse &lt;--&gt; Proband" usemap="#adrProband">
 <map name="adrProband">
-  <area shape=rect coords="0,0,32,32" title='Adresse von ...' href="<?php echo $candyURL['AdresseProband']?>">
+  <area shape=rect coords="0,0,32,32" title='Adresse von ...' href="<?php echo $candyURL['ProbandAdresse']?>">
 </map>
 </li>
 </ul>
