Region und Umkreis. Vormerkung folgt ...

--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -15,12 +15,12 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['TrainerOrtTerminart']?>">TrainerOrtTerminart</a>
 </li>
-<!--li>
-<a href="<?php echo $candyURL['Kurs']?>">Kurs</a>
+<li>
+<a href="<?php echo $candyURL['Region']?>">Region</a>
 </li>
 <li>
-<a href="<?php echo $candyURL['KursTrainer']?>">Kurs-Trainer</a>
-</li-->
+<a href="<?php echo $candyURL['Umkreis']?>">Umkreis</a>
+</li>
 <!--li>
 <a href="<?php echo $candyURL['Zeitstempel']?>">Zeitstempel</a>
 </li-->
