--- a/naviProband.html
+++ b/naviProband.html
@@ -18,6 +18,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['ProbandMassnahme']?>">Massnahme</a>
 </li>
+<li>
+<a href="<?php echo $candyURL['Vormerkung']?>">Vormerkung</a>
+</li>
 <hr>
 <li>
 <a href="<?php echo $candyURL['Tel']?>">Telefon</a>
