Vormerkung: Bei Navi Proband kann die Vormerkung des Probanden für alle Kursorte gelöscht werden. Navi Plan: Symbol zur Übernahme der Vormerkung in bestehenden Termin. Soll zur Anzeige aller Termine dieses Kursortes führen.

--- a/naviPlan.html
+++ b/naviPlan.html
@@ -7,13 +7,14 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
+<a href="<?php echo $candyURL['vmKursort']?>&b=v">Vormerkung</a>
+</li>
+<hr>
+<li>
 <a href="<?php echo $candyURL['Termin']?>&i=2&b=n">Nachschulung</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Termin']?>&i=2&b=u">UE</a>
-</li>
-<li>
-<a href="<?php echo $candyURL['Termin']?>&i=2&b=v">Vormerkung</a>
 </li>
 <li>
 <a href="<?php echo $candyURL['Termin']?>&i=2&b=c">Verkehrscoaching</a>
