Vormerkungen nur noch für genau einen Kursort. Übernahme VM in Termin am Kursort. Schleife noch nicht 100% intakt.

--- a/naviPlan.html
+++ b/naviPlan.html
@@ -7,7 +7,7 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['vmKursort']?>&b=v">Vormerkung</a>
+<a href="<?php echo $candyURL['Vormerkung']?>&b=v">Vormerkung</a>
 </li>
 <hr>
 <li>
