Dokumenten-Navi: Liste anwesend und bezahlt, beim Toggeln Sprung in die Listen ProbandTermin und ProbandMassnahme.

--- a/naviDocs.html
+++ b/naviDocs.html
@@ -10,6 +10,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['docs']?>">Anschreiben</a>
+<a href="<?php echo $candyURL['docs']?>&s=a">anwesend</a>
+</li>
+<li>
+<a href="<?php echo $candyURL['docs']?>&s=b">bezahlt</a>
 </li>
 </ul>
