naviDocs wieder entfernt. Anwesend jetzt in naviProband, bezahlt in naviGeld.

--- a/naviProband.html
+++ b/naviProband.html
@@ -10,6 +10,9 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
+<a href="<?php echo $candyURL['ProbandTermin']?>">anwesend</a>
+</li>
+<li>
 <img src="images/iconmonstr-user-25-24.png" alt="neuer Proband" usemap="#Proband">
 <map name="Proband">
   <area shape=rect coords="0,0,32,32" title='Proband anlegen ...' href="<?php echo $candyURL['Proband']?>">
