--- a/naviDocs.html
+++ b/naviDocs.html
@@ -10,9 +10,6 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 
 <ul>
 <li>
-<a href="<?php echo $candyURL['docs']?>&s=a">anwesend</a>
-</li>
-<li>
-<a href="<?php echo $candyURL['docs']?>&s=b">bezahlt</a>
+<a href="<?php echo $candyURL['ProbandTermin']?>">anwesend</a>
 </li>
 </ul>
