--- a/kopfteil.html
+++ b/kopfteil.html
@@ -1,4 +1,7 @@
 <div id="kopfteil">
 <?php
-++$_E['container'];
+if( isset($_E) && !isset($_E['container']) )
+  $_E['container'] = 1;
+else
+  ++$_E['container'];
 ?>
