Kurs-Anmeldung Nachschulung: Termin.Kuerzel und Kosten mit im Anschreiben.

--- a/naviVerknuepfen.html
+++ b/naviVerknuepfen.html
@@ -15,10 +15,10 @@ naechste Ziffer kleiner ? 1 Wurf : 2 Wuerfe
 <li>
 <a href="<?php echo $candyURL['TrainerOrtTerminart']?>">TrainerOrtTerminart</a>
 </li>
-<!--li>
-<a href="<?php echo $candyURL['Region']?>">Region</a>
-</li>
 <li>
+<a href="<?php echo $candyURL['MassnahmeGebuehr']?>">MassnahmeGebuehr</a>
+</li>
+<!--li>
 <a href="<?php echo $candyURL['Umkreis']?>">Umkreis</a>
 </li>
 <li>
