code for handling a 1:n relation.

--- a/naviStation.html
+++ b/naviStation.html
@@ -1,5 +1,11 @@
 <ul>
 <li>
+<a href="<?php echo $candyURL['District']?>">District</a>
+</li>
+<li>
 <a href="<?php echo $candyURL['Station']?>">Station</a>
 </li>
+<!--li>
+<a href="<?php echo $candyURL['Test']?>">Test</a>
+</li-->
 </ul>
